# getfavicon

./: Cargo.toml  LICENSE  README.md
examples/: getfavicon.rs
src/: download.rs  error.rs  favicon.rs  favicon_url.rs  find_favicon.rs  lib.rs  magick.rs  main.rs
