[package]
name = "getfavicon"
version = "0.2.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
url = "2"
reqwest = "0.11"
mime = "0.3"
tempfile = "3"
lazy_static = "1"
base64 = "0.13"

[dev-dependencies]
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
