[package]
name = "getfavicon"
version = "0.2.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
url = "2"
reqwest = "0.12"
mime = "0.3"
tempfile = "3"
lazy_static = "1"
base64 = "0.22"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
